--- a/Customer_feedback.html
+++ b/Customer_feedback.html
@@ -21,7 +21,7 @@
       <td>{{d[6]}}</td>
       <td>{{d[7]}}</td>
       <td>{{d[3]}}</td>
-      <td>{{d[4]}}</td>
+      <td><img src="../static/products/{{d[4]}}" width="150" height="150"></td>
       <td>{{d[5]}}</td>
       <td><a href="{{url_for('del_feed',id=d[0])}}">delete</a></td>
     </tr>
@@ -30,3 +30,4 @@
 </form>
 </body>
 </html>
+
