--- a/Login.html
+++ b/Login.html
@@ -6,17 +6,19 @@
 </head>
 
 <body>
+{% extends 'category.html' %}
+{% block body %}
 <form id="form1" name="form1" method="post" action="/log">
-  <table width="200" border="1">
+  <table width="200" border="0">
     <tr>
       <td>Username</td>
       <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
+      <input type="text" name="textfield" id="textfield" title="Atleast 4 characters" required  /></td>
     </tr>
     <tr>
       <td>Password</td>
       <td><label for="textfield2"></label>
-      <input type="password" name="textfield2" id="textfield2" /></td>
+      <input type="password" name="textfield2" id="textfield2"  required pattern="[A-Z a-z0-9]{3,25}"/></td>
     </tr>
     <tr>
       <td colspan="2"><div align="center">
