--- a/AppHomeTemplates.html
+++ b/AppHomeTemplates.html
@@ -5104,7 +5104,7 @@ img {
 
                                     <div class="collapse navbar-collapse align-items-start collapse" id="karl-navbar">
                                         <ul class="navbar-nav animated" id="nav">
-                                            <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                                            <li class="nav-item active"><a class="nav-link" href="/AppOwner_Home">Home</a></li>
                                             <!--<li class="nav-item dropdown">-->
                                                 <!--<a class="nav-link dropdown-toggle" href="#" id="karlDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>-->
                                                 <!--<div class="dropdown-menu" aria-labelledby="karlDropdown">-->
@@ -5115,9 +5115,14 @@ img {
                                                     <!--<a class="dropdown-item" href="checkout.html">Checkout</a>-->
                                                 <!--</div>-->
                                             <!--</li>-->
-                                            <li class="nav-item"><a class="nav-link" href="/Sellers_Reg">Signup</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/Sellers_Manage">Manage Sellers</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/Site_Notification">Site Notification</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/Customer_Feedback">Customer Feedback</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/View_Offers">View Offers</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/View_Stock_Noti">View Stocks</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/block_users">Block Users</a></li>
                                             <!--<li class="nav-item"><a class="nav-link" href="#"><span class="karl-level">hot</span> Shoes</a></li>-->
-                                            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -5239,7 +5244,7 @@ img {
                                 <div class="row">
                                     <div class="col-12 col-lg-5">
                                         <div class="quickview_pro_img">
-                                            <img src="../static/img/product-img/abc.png" alt="no img">
+                                            <img src="../static/img/product-img/product-1.jpg" alt="">
                                         </div>
                                     </div>
                                     <div class="col-12 col-lg-7">
