--- a/Block_Users.html
+++ b/Block_Users.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="">
   <table width="472" border="1">
     <tr>
@@ -17,16 +19,19 @@
       <td width="45">Mob</td>
       <td width="84">&nbsp;</td>
     </tr>
+    {% for d in val %}
     <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td><a href="#">Block</a></td>
+      <td>{{d[1]}}</td>
+      <td>&nbsp;{{d[2]}}</td>
+      <td>{{d[3]}} , {{d[4]}} , {{d[5]}} , {{d[6]}}</td>
+      <td>&nbsp;{{d[7]}}</td>
+      <td>&nbsp;{{d[8]}}</td>
+      <td>&nbsp;{{d[9]}}</td>
+      <td><a href="{{url_for('unblock',id=d[0])}}">Unblock</a></td>
     </tr>
+    {% endfor %}
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
