--- a/AppMoreTemplates.html
+++ b/AppMoreTemplates.html
@@ -401,57 +401,57 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </div>
                     </div>
                     <!-- Single Footer Area Start -->
-                    <div class="col-12 col-sm-6 col-md-3 col-lg-2">
-                        <div class="single_footer_area">
+                    <!--<div class="col-12 col-sm-6 col-md-3 col-lg-2">-->
+                        <!--<div class="single_footer_area">-->
                             <!--<ul class="footer_widget_menu">-->
-                                <!--&lt;!&ndash;<li><a href="#">About</a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#">Blog</a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#">Faq</a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#">Returns</a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#">Contact</a></li>&ndash;&gt;-->
+                                <!--<li><a href="#">About</a></li>-->
+                                <!--<li><a href="#">Blog</a></li>-->
+                                <!--<li><a href="#">Faq</a></li>-->
+                                <!--<li><a href="#">Returns</a></li>-->
+                                <!--<li><a href="#">Contact</a></li>-->
                             <!--</ul>-->
-                        </div>
-                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
                     <!-- Single Footer Area Start -->
-                    <div class="col-12 col-sm-6 col-md-3 col-lg-2">
-                        <div class="single_footer_area">
+                    <!--<div class="col-12 col-sm-6 col-md-3 col-lg-2">-->
+                        <!--<div class="single_footer_area">-->
                             <!--<ul class="footer_widget_menu">-->
                                 <!--<li><a href="#">My Account</a></li>-->
                                 <!--<li><a href="#">Shipping</a></li>-->
                                 <!--<li><a href="#">Our Policies</a></li>-->
                                 <!--<li><a href="#">Afiliates</a></li>-->
                             <!--</ul>-->
-                        </div>
-                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
                     <!-- Single Footer Area Start -->
-                    <div class="col-12 col-lg-5">
-                        <div class="single_footer_area">
+                    <!--<div class="col-12 col-lg-5">-->
+                        <!--<div class="single_footer_area">-->
                             <!--<div class="footer_heading mb-30">-->
                                 <!--<h6>Subscribe to our newsletter</h6>-->
                             <!--</div>-->
-                            <!--<div class="subscribtion_form">-->
-                                <!--<form action="#" method="post">-->
-                                    <!--<input type="email" name="mail" class="mail" placeholder="Your email here">-->
-                                    <!--<button type="submit" class="submit">Subscribe</button>-->
-                                <!--</form>-->
-                            <!--</div>-->
-                        </div>
-                    </div>
+                            <!--&lt;!&ndash;<div class="subscribtion_form">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<form action="#" method="post">&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<input type="email" name="mail" class="mail" placeholder="Your email here">&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<button type="submit" class="submit">Subscribe</button>&ndash;&gt;-->
+                                <!--&lt;!&ndash;</form>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
                 <div class="line"></div>
 
                 <!-- Footer Bottom Area Start -->
                 <div class="footer_bottom_area">
-                    <div class="row">
-                        <div class="col-12">
+                    <!--<div class="row">-->
+                        <!--<div class="col-12">-->
                             <!--<div class="footer_social_area text-center">-->
                                 <!--<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>-->
                                 <!--<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
                                 <!--<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
                                 <!--<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>-->
                             <!--</div>-->
-                        </div>
-                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
             </div>
         </footer>
