--- a/App_Owner_Home.html
+++ b/App_Owner_Home.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppHomeTemplates.html' %}
+{% block body %}
 <form id="form1" name="form1" method="post" action="">
-  <table width="1089" border="1">
+  <table width="901" border="1">
     <tr>
-      <td width="134" height="49"><a href="/Sellers_Manage">Sellers Manage</a></td>
-      <td width="135"><a href="/Site_Notification">Site Notification</a></td>
-      <td width="285"><a href="/Customer_Feedback">Customer Feedback Management</a></td>
-      <td width="114"><a href="/block_users">Block Users</a></td>
-      <td width="109"><a href="/View_Offers">View Offers</a></td>
-      <td width="203"><a href="/View_Stock_Noti">View Stock Notification</a></td>
-      <td width="63"><a href="/login">Logout</a></td>
+      <td width="135" height="49"><a href="/Sellers_Manage">Manage Sellers</a></td>
+      <td width="141"><a href="/Site_Notification">Site Notification</a></td>
+      <td width="172"><a href="/Customer_Feedback">Customer Feedback</a></td>
+      <td width="64"><a href="/View_Offers">View Offers</a></td>
+      <td width="156"><a href="/View_Stock_Noti">View Stocks </a></td>
+      <td width="109"><a href="/block_users">Block Users</a></td>
+      <td width="78"><a href="/login">Logout</a></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
