--- a/Login.html
+++ b/Login.html
@@ -1,24 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-{% extends 'category.html' %}
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
+<!--<body>-->
+{% extends 'Logintemplate.html' %}
 {% block body %}
 <form id="form1" name="form1" method="post" action="/log">
-  <table width="200" border="0">
+  <table width="433" border="0">
     <tr>
-      <td>Username</td>
-      <td><label for="textfield"></label>
+      <td width="146">Username</td>
+      <td width="277"><label for="textfield"></label>
       <input type="text" name="textfield" id="textfield" title="Atleast 4 characters" required  /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Password</td>
       <td><label for="textfield2"></label>
       <input type="password" name="textfield2" id="textfield2"  required pattern="[A-Z a-z0-9]{3,25}"/></td>
+    </tr>
+    <tr>
+      <td colspan="2">&nbsp;</td>
     </tr>
     <tr>
       <td colspan="2"><div align="center">
@@ -27,5 +33,7 @@
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
+
