--- a/Sel_Add_Product.html
+++ b/Sel_Add_Product.html
@@ -1,59 +1,108 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
-<form id="form1" name="form1" method="post" action="/Sel_Addprt">
-  <table width="200" border="1">
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
+<form id="form1" name="form1" method="post" enctype="multipart/form-data" action="/Sel_Addprt">
+  <table width="520" border="0">
     <tr>
-      <td>Category</td>
-      <td><label for="textfield4"></label>
-      <input type="text" name="textfield4" id="textfield4" /></td>
+      <td width="118">Category</td>
+      <td width="22">&nbsp;</td>
+      <td width="366"><label for="textfield4"></label>
+      <input type="text" name="textfield4" id="textfield4" required pattern="[A-Z a-z]{3,25}"/></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Item name</td>
+      <td>&nbsp;</td>
       <td><label for="textfield"></label>
-        <input type="text" name="textfield" id="textfield" /></td>
+        <input type="text" name="textfield" id="textfield" required pattern="[A-Z a-z0-9]{3,25}"/></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Price</td>
+      <td>&nbsp;</td>
       <td><label for="textfield2"></label>
-        <input type="text" name="textfield2" id="textfield2" /></td>
+        <input type="text" name="textfield2" id="textfield2" required /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Qty</td>
+      <td>&nbsp;</td>
       <td><label for="textfield3"></label>
-        <input type="text" name="textfield3" id="textfield3" /></td>
+        <input type="text" name="textfield3" id="textfield3" required /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Description</td>
+      <td>&nbsp;</td>
       <td><label for="textarea"></label>
-        <textarea name="textarea" id="textarea" cols="45" rows="5"></textarea></td>
+        <textarea name="textarea" id="textarea" cols="45" rows="5" required ></textarea></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Photo_1 </td>
+      <td>&nbsp;</td>
       <td><label for="fileField"></label>
-        <input type="file" name="fileField" id="fileField" /></td>
+        <input type="file" name="fileField" id="fileField" required /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Photo_2</td>
+      <td>&nbsp;</td>
       <td><label for="fileField2"></label>
-        <input type="file" name="fileField2" id="fileField2" /></td>
+        <input type="file" name="fileField2" id="fileField2" required/></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Video</td>
+      <td>&nbsp;</td>
       <td><label for="fileField3"></label>
-        <input type="file" name="fileField3" id="fileField3" /></td>
+        <input type="file" name="fileField3" id="fileField3" required/></td>
     </tr>
     <tr>
-      <td colspan="2"><div align="center">&nbsp;
+      <td colspan="3">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3"><div align="center">&nbsp;
           <input type="submit" name="button2" id="button3" value="Submit" />
       </div></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
