--- a/Sel_Offers_Management.html
+++ b/Sel_Offers_Management.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Add_Offers">
   <table width="524" border="1">
     <tr>
       <td width="88">Item Name</td>
       <td width="55">Offers</td>
       <td width="63">Periods</td>
-      <td width="80">Old Price</td>
-      <td width="78">New Price</td>
+      <td width="80">Price</td>
+      <td width="78">Original Price</td>
       <td width="56">&nbsp;</td>
       <td width="58">&nbsp;</td>
     </tr>
@@ -24,7 +26,7 @@
       <td>{{d[3]}} to {{d[4]}}</td>
       <td>{{d[7]}}</td>
       <td>{{d[5]}}</td>
-      <td><a href="#">Update</a></td>
+      <td><a href="{{url_for('Update_Offers',id=d[0])}}">Update</a></td>
       <td><a href="{{url_for('del_offer',id=d[0])}}">Delete</a></td>
     </tr>
     {% endfor %}
@@ -35,5 +37,6 @@
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
