--- a/Sel_Product_Management.html
+++ b/Sel_Product_Management.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Sel_Add_Product">
   <table width="744" border="1">
     <tr>
@@ -15,7 +17,7 @@
       <td width="32">Qty</td>
       <td width="105">Description</td>
       <td width="79">Photo_1</td>
-      <td width="64">photo_2</td>
+      <td width="79">Photo_2</td>
       <td width="59">&nbsp;</td>
       <td width="62">&nbsp;</td>
     </tr>
@@ -25,7 +27,7 @@
       <td>{{d[2]}}</td>
       <td>{{d[3]}}</td>
       <td>{{d[4]}}</td>
-      <td>{{d[5]}}></td>
+      <td>{{d[5]}}</td>
       <td> <img src="../static/products/{{d[6]}}" width="150" height="150"></td>
       <td><img src="../static/products/{{d[7]}}" height="150" width="150"></td>
 
@@ -42,5 +44,6 @@
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
