--- a/Sel_Stock_Notification.html
+++ b/Sel_Stock_Notification.html
@@ -8,20 +8,22 @@
 <!--<body>-->
 {% extends 'SelMoreTemplates.html' %}
   {% block body %}
-<form id="form1" name="form1" method="post" action="/Stk_Add">
-  <table width="295" border="0">
+<form id="form1" name="form1" method="post" action="/stknoti">
+  <table width="289" border="0">
     <tr>
-      <td width="100">Category</td>
-      <td width="10">&nbsp;</td>
-      <td width="171"><label for="cat"></label>
-        <select name="cat" id="cat" required>
+      <td width="88">Category</td>
+      <td width="8">&nbsp;</td>
+      <td width="110"><label for="cat"></label>
+        <select name="cat" id="cat" >
           <option value="">--Select--</option>
           {% for i in val %}
           <option value="{{i[0]}}">{{i[0]}}</option>
           {% endfor %}
       </select></td>
+      <td width="65">&nbsp;</td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -30,30 +32,32 @@
       <td>Item Name</td>
       <td>&nbsp;</td>
       <td><label for="item"></label>
-        <select name="item" id="item" required>
+        <select name="item" id="item" >
           <option value="">--Select--</option>
       </select></td>
+      <td><input type="submit" name="button" id="Search" value="Search" /></td>
     </tr>
+  </table>
+  <table width="200" border="1">
     <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
+      <td>Product Name</td>
       <td>Stock</td>
       <td>&nbsp;</td>
-      <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" required pattern="[0-9]" /></td>
     </tr>
+     {% for d in val %}
     <tr>
-      <td colspan="3">&nbsp;</td>
+      <td>{{d[1]}}</td>
+      <td>{% if d[2]==0 %} out of stock {% else %} {{d[2]}} {% endif %}</td>
+      <td><a href="{{url_for('Update_stock',id=d[0])}}">Update</a></td>
     </tr>
+    {% endfor %}
     <tr>
       <td colspan="3"><div align="center">
-        <input type="submit" name="button" id="button" value="Submit" />
+        <input type="submit" name="button" id="button" value="Add Stock" />
       </div></td>
     </tr>
   </table>
+
 </form>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
@@ -69,7 +73,7 @@ $(document).ready(function(){
 
             $.ajax({
                 type: 'POST',
-                url: "/index7",
+                url: "/index6",
                 data: { sn: br },
 
                 success: function(response) {
