--- a/Sel_Update_Offers.html
+++ b/Sel_Update_Offers.html
@@ -1,38 +1,57 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Upt_off">
-  <table width="493" border="1">
+  <table width="501" border="0">
     <tr>
-      <td width="87">Offers</td>
-      <td width="390"><label for="textarea"></label>
-        <textarea name="textarea" id="textarea" cols="45" rows="5"></textarea></td>
+      <td width="98">Offers</td>
+      <td width="11">&nbsp;</td>
+      <td width="378"><label for="textarea"></label>
+        <textarea name="textarea" id="textarea" cols="45" rows="5" required>{{val[2]}}</textarea></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Periods</td>
+      <td>&nbsp;</td>
       <td><label for="textfield3"></label>
-        <input type="date" name="textfield3" id="textfield3" />
+        <input type="date" name="textfield3" id="textfield3" value="{{val[3]}}" required />
         <label for="textfield4"></label>
         to
-        <input type="date" name="textfield4" id="textfield4" />
+        <input type="date" name="textfield4" id="textfield4" value="{{val[4]}}" required />
         <label for="textfield4"></label></td>
     </tr>
     <tr>
-      <td>New Price</td>
-      <td><label for="textfield5"></label>
-        <input type="text" name="textfield5" id="textfield5" /></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
-      <td colspan="2"><div align="center">
+      <td>Original Price</td>
+      <td>&nbsp;</td>
+      <td><label for="textfield5"></label>
+        <input type="text" name="textfield5" id="textfield5" value="{{val[5]}}" required/></td>
+    </tr>
+    <tr>
+      <td colspan="3">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3"><div align="center">
         <input type="submit" name="button" id="button" value="Update" />
         &nbsp;&nbsp;&nbsp;</div></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
