--- a/Site_Notification.html
+++ b/Site_Notification.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppMoreTemplates.html' %}
+{% block body %}
 <form id="form1" name="form1" method="post" action="/site_noti">
-  <table width="200" border="1">
+  <table width="296" border="0">
     <tr>
-      <td>Message</td>
-      <td><label for="textfield"></label>
+      <td width="82">Message</td>
+      <td width="6">&nbsp;</td>
+      <td width="218"><label for="textfield"></label>
       <input type="text" name="textfield" id="textfield" required /></td>
     </tr>
     <tr>
-      <td colspan="2">&nbsp;</td>
+      <td colspan="3">&nbsp;</td>
     </tr>
     <tr>
-      <td colspan="2"><div align="center">
-        <a href="/AppOwner_Home">Back</a>
+      <td colspan="3"><div align="center"><a href="/AppOwner_Home">Back</a>
          &nbsp; &nbsp;
          <input type="submit" name="button" id="button2" value="Submit" />
       </div></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
-
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
