--- a/View_Stock_Notification.html
+++ b/View_Stock_Notification.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Ptrview">
   <table width="200" border="1">
     <tr>
       <td>Category</td>
       <td><label for="cat"></label>
-        <select name="cat" id="cat">
-          <option value="0">--Select--</option>
+        <select name="cat" id="cat" required>
+          <option value="">--Select--</option>
           {% for i in val %}
           <option value="{{i[0]}}">{{i[0]}}</option>
           {% endfor %}
@@ -21,24 +23,21 @@
     <tr>
       <td>Item Name</td>
       <td><label for="item"></label>
-        <select name="item" id="item">
+        <select name="item" id="item" required>
+          <option value="">--Select--</option>
       </select></td>
       <td><input type="submit" name="button" id="button" value="Search" /></td>
     </tr>
   </table>
   <table width="200" border="1">
     <tr>
-      <td>Price</td>
-      <td>Qty</td>
-      <td>Description</td>
-      <td>Photo</td>
+      <td>Product Name</td>
+      <td>Stock</td>
     </tr>
     {% for d in val %}
     <tr>
-      <td>{{d[3]}}</td>
-      <td>{{d[4]}}</td>
-      <td>{{d[5]}}</td>
-      <td><img src="../static/products/{{d[6]}}" width="150" height="150"></td>
+      <td>{{d[1]}}</td>
+      <td>{% if d[2]==0 %} out of stock {% else %} {{d[2]}} {% endif %}</td>
     </tr>
     {% endfor %}
   </table>
@@ -81,5 +80,6 @@ $(document).ready(function(){
     });
 });
 </script>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
