--- a/Sel_StockUpdate.html
+++ b/Sel_StockUpdate.html
@@ -1,34 +1,53 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Upt_Stk">
-  <table width="200" border="1">
+  <table width="287" border="0">
     <tr>
-      <td>Category</td>
-      <td><label for="textfield2"></label>
+      <td width="97">Category</td>
+      <td width="3">
+      <td width="173"><label for="textfield2"></label>
       <input type="text" name="textfield2" id="textfield2" value="{{val[2]}}" disabled />
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>
+      <td>
+    </tr>
+    <tr>
       <td>Item Name</td>
+      <td>
       <td><label for="textfield3"></label>
       <input type="text" name="textfield3" id="textfield3" value="{{val[3]}}" disabled/>
       </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Stock</td>
+      <td>&nbsp;</td>
       <td><label for="textfield"></label>
       <input type="text" name="textfield" id="textfield" value="{{val[1]}}" required pattern="[0-9]" /></td>
     </tr>
     <tr>
-      <td colspan="2"><div align="center">
+      <td colspan="3">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3"><div align="center">
         <input type="submit" name="button" id="button" value="Update" />
       </div></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
