--- a/Sel_Update_Product.html
+++ b/Sel_Update_Product.html
@@ -1,56 +1,105 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'SelMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Update_ptr">
-  <table width="200" border="1">
+  <table width="479" border="0">
     <tr>
-      <td>Category</td>
-      <td><label for="textfield4"></label>
-      <input type="text" name="textfield4" id="textfield4" value="{{val[1]}}" /></td>
+      <td width="112">Category</td>
+      <td width="6">&nbsp;</td>
+      <td width="347"><label for="textfield4"></label>
+      <input type="text" name="textfield4" id="textfield4" value="{{val[1]}}" disabled /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Item name</td>
+      <td>&nbsp;</td>
       <td><label for="textfield"></label>
-        <input type="text" name="textfield" id="textfield" value="{{val[2]}}" /></td>
+        <input type="text" name="textfield" id="textfield" value="{{val[2]}}" disabled/></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Price</td>
+      <td>&nbsp;</td>
       <td><label for="textfield2"></label>
-        <input type="text" name="textfield2" id="textfield2" value="{{val[3]}}" /></td>
+        <input type="text" name="textfield2" id="textfield2" value="{{val[3]}}" required /></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Qty</td>
+      <td>&nbsp;</td>
       <td><label for="textfield3"></label>
-        <input type="text" name="textfield3" id="textfield3" value="{{val[4]}}"/></td>
+        <input type="text" name="textfield3" id="textfield3" value="{{val[4]}}" required pattern="[0-9]"/></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Description</td>
+      <td>&nbsp;</td>
       <td><label for="textarea"></label>
-        <textarea name="textarea" id="textarea" cols="45" rows="5">{{val[5]}}</textarea></td>
+        <textarea name="textarea" id="textarea" cols="45" rows="5" required >{{val[5]}}</textarea></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Photo_1 </td>
+      <td>&nbsp;</td>
       <td><a href="{{url_for('img1_uld',id=val[0])}}">Change Photo1</a></td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Photo_2</td>
+      <td>&nbsp;</td>
       <td><a href="{{url_for('img2_uld',id=val[0])}}">Change Photo2</a></label></td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Video</td>
+      <td>&nbsp;</td>
       <td><a href="{{url_for('Video_uld',id=val[0])}}">Change Video</a></label></td>
     </tr>
     <tr>
-      <td colspan="2"><div align="center">
+      <td colspan="3">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3"><div align="center">
         <input type="submit" name="button2" id="button3" value="Update " />
       </div></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
