--- a/View_Offer_Item.html
+++ b/View_Offer_Item.html
@@ -1,33 +1,55 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/Off_Item">
-  <table width="200" border="1">
+  <table width="890" border="0">
     <tr>
-      <td>Price</td>
-      <td><label for="textfield"></label>
+      <td width="154">Price</td>
+      <td width="25">&nbsp;</td>
+      <td width="697"><label for="textfield"></label>
       <input type="text" name="textfield" id="textfield" value="{{val[3]}}"/></td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Qty</td>
+      <td>&nbsp;</td>
       <td><label for="textfield2"></label>
       <input type="text" name="textfield2" id="textfield2" value="{{val[4]}}" /></td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Description</td>
+      <td>&nbsp;</td>
       <td><label for="textarea"></label>
       <textarea name="textarea" id="textarea" cols="45" rows="5">{{val[5]}}</textarea></td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Photo</td>
+      <td>&nbsp;</td>
       <td><img name="" src="../static/products/{{val[6]}}" width="32" height="32" alt="" /></td>
     </tr>
   </table>
 </form>
-</body>
-</html>
+{% endblock %}
+<!--</body>-->
+<!--</html>-->
