--- a/View_Offers.html
+++ b/View_Offers.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<title>Untitled Document</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
+{% extends 'AppMoreTemplates.html' %}
+  {% block body %}
 <form id="form1" name="form1" method="post" action="/btn_offerview">
   <table width="200" border="1">
     <tr>
@@ -31,7 +33,7 @@
     <tr>
       <td width="50">Offers</td>
       <td width="53">Period</td>
-      <td width="94">New price</td>
+      <td width="94">Original Price</td>
       <td width="48">&nbsp;</td>
     </tr>
     {% for d in btn %}
@@ -82,5 +84,6 @@ $(document).ready(function(){
     });
 });
 </script>
-</body>
-</html>
+ {% endblock %}
+<!--</body>-->
+<!--</html>-->
